@@ -2,7 +2,7 @@ sdparm (1.03-0.1) unstable; urgency=low
 
   * allow multiple devices to be given
 
- -- Douglas Gilbert <dgilbert@interlog.org>  Mon, 18 Feb 2008 18:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.org>  Thu, 13 Mar 2008 15:00:00 -0400
 
 sdparm (1.02-1) unstable; urgency=low
 
